@@ -1,7 +1,9 @@
 #!/bin/sh --
 
+DEBUG=%DEBUG%
+VERSION=%VERSION%
 JARPATH=%JARPATH%
-JAVAUNIXLIBPATH=%DJAVAUNIXLIBPATH%
-JAVAUNIXJARPATH=%DJAVAUNIXJARPATH%
+JAVAUNIXLIBPATH=%JAVAUNIXLIBPATH%
+JAVAUNIXJARPATH=%JAVAUNIXJARPATH%
 
-java -Djava.library.path=$JAVAUNIXLIBPATH -cp $JAVAUNIXJARPATH/unix.jar:$JAVAUNIXJARPATH/debug-enable.jar:$JAVAUNIXJARPATH/hexdump.jar:$JARPATH/dbus.jar org.freedesktop.dbus.bin.ListDBus "$@"
+exec java -DPid=$$ -DVersion=$VERSION -Djava.library.path=$JAVAUNIXLIBPATH -cp $JAVAUNIXJARPATH/unix.jar:$JAVAUNIXJARPATH/debug-$DEBUG.jar:$JAVAUNIXJARPATH/hexdump.jar:$JARPATH/dbus.jar org.freedesktop.dbus.bin.ListDBus "$@"
